<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.codurance.crafted_design</groupId>
	<artifactId>SOLID</artifactId>
	<version>1.0-SNAPSHOT</version>

	<properties>
		<hamcrest.version>1.3</hamcrest.version>
		<junit.version>4.11</junit.version>
		<mockito.version>1.9.5</mockito.version>
		<cucumber_jvm.version>1.1.5</cucumber_jvm.version>
		<selenium.version>2.41.0</selenium.version>
		<surefireArgs>-Xms512m -Xmx512m -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=512m</surefireArgs>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>${hamcrest.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-guice</artifactId>
			<version>${cucumber_jvm.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber_jvm.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<executions>
					<execution>
						<id>default-test</id>
						<phase>test</phase>
						<configuration>
							<argLine>${surefireArgs}</argLine>
							<includes>
								<include>**/*Spec.scala</include>
								<include>**/*Should.*</include>
								<include>**/*Test.*</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>

</project>